--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -1,5 +1,5 @@
 @book{matrixGolub,
-    author = { Golub, Gene H. AND Van Loan, Charles F. },
+    author = { Golub, Gene H. and Van Loan, Charles F. },
     title = { Matrix computations },
     edition = { 3. ed. } ,
     publisher = {Johns Hopkins Univ. Pr.},
@@ -9,7 +9,7 @@
 }
 
 @book{optimierungBurkhard,
-    author = { Burkard, Rainer E. AND Zimmermann, Uwe },
+    author = { Burkard, Rainer E. and Zimmermann, Uwe },
     title = { Einführung in die mathematische Optimierung },
     publisher = {Springer Spektrum},
     isbn = {9783642286728},
@@ -18,7 +18,7 @@
 }
 
 @book{numerikGrossmann,
-    author = { Großmann, Christian AND Roos, Hans-Görg },
+    author = { Großmann, Christian and Roos, Hans-Görg },
     title = { Numerik partieller Differentialgleichungen },
     publisher = {Teubner},
     isbn = {3519020890},
@@ -27,7 +27,7 @@
 }
 
 @book {maschinendynamikDresig,
-    author = { Dresig, Hans AND Holzweißig, Franz Rockhausen, Ludwig },
+    author = { Dresig, Hans and Holzweißig, Franz and Rockhausen, Ludwig },
     title = { Maschinendynamik },
     edition = { 10., neu bearb. Aufl. } ,
     publisher = {Springer},
@@ -39,7 +39,7 @@
 
 @inproceedings{hauptteilTkachuk,
     title={Weighted Eigenvalue Counts on Intervals for Spectrum Optimization},
-    author={Tkachuk, Anton und Tkachuk, Mykola},
+    author={Tkachuk, Anton and Tkachuk, Mykola},
     booktitle={International Conference on Advanced Mechanical and Power Engineering},
     pages={228--237},
     year={2021},
@@ -48,10 +48,19 @@
 
 @article{grundlageFutamura,
     title={Parallel stochastic estimation method of eigenvalue distribution},
-    author={Futamura, Yasunori und Tadano, Hiroto und Sakurai, Tetsuya},
+    author={Futamura, Yasunori and Tadano, Hiroto and Sakurai, Tetsuya},
     journal={JSIAM Letters},
     volume={2},
     pages={127--130},
     year={2010},
     publisher={The Japan Society for Industrial and Applied Mathematics}
+}
+
+@inproceedings{hutch++Meyer,
+  title={Hutch++: Optimal stochastic trace estimation},
+  author={Meyer, Raphael A and Musco, Cameron and Musco, Christopher and Woodruff, David P},
+  booktitle={Symposium on Simplicity in Algorithms (SOSA)},
+  pages={142--155},
+  year={2021},
+  organization={SIAM}
 }
