--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -64,3 +64,14 @@
   year={2021},
   organization={SIAM}
 }
+
+@article{traceApproxHutchinson,
+  title={A stochastic estimator of the trace of the influence matrix for Laplacian smoothing splines},
+  author={Hutchinson, Michael F},
+  journal={Communications in Statistics-Simulation and Computation},
+  volume={18},
+  number={3},
+  pages={1059--1076},
+  year={1989},
+  publisher={Taylor \& Francis}
+}
