Formatierung, Ross hinzugefügt

--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -57,21 +57,30 @@
 }
 
 @inproceedings{hutch++Meyer,
-  title={Hutch++: Optimal stochastic trace estimation},
-  author={Meyer, Raphael A and Musco, Cameron and Musco, Christopher and Woodruff, David P},
-  booktitle={Symposium on Simplicity in Algorithms (SOSA)},
-  pages={142--155},
-  year={2021},
-  organization={SIAM}
+    title={Hutch++: Optimal stochastic trace estimation},
+    author={Meyer, Raphael A and Musco, Cameron and Musco, Christopher and Woodruff, David P},
+    booktitle={Symposium on Simplicity in Algorithms (SOSA)},
+    pages={142--155},
+    year={2021},
+    organization={SIAM}
 }
 
 @article{traceApproxHutchinson,
-  title={A stochastic estimator of the trace of the influence matrix for Laplacian smoothing splines},
-  author={Hutchinson, Michael F},
-  journal={Communications in Statistics-Simulation and Computation},
-  volume={18},
-  number={3},
-  pages={1059--1076},
-  year={1989},
-  publisher={Taylor \& Francis}
+    title={A stochastic estimator of the trace of the influence matrix for Laplacian smoothing splines},
+    author={Hutchinson, Michael F},
+    journal={Communications in Statistics-Simulation and Computation},
+    volume={18},
+    number={3},
+    pages={1059--1076},
+    year={1989},
+    publisher={Taylor \& Francis}
+}
+
+@article{synthesizeMatricesRoss,
+    title={An Algorithm for Synthesizing Mass and Stiffness Matrices From Experimental Vibration Modes},
+    author={Ross Jr, RG},
+    journal={JPL Quart. Tech. Rev.},
+    volume={2},
+    number={3},
+    year={1972}
 }
