--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -17,6 +17,17 @@
     url = { https://katalog.slub-dresden.de/id/0-688968007 }
 }
 
+@book{projektionJarre,
+    author={Jarre, Florian and Stoer, Josef},
+    title={Projektionsverfahren},
+    bookTitle={Optimierung: Einführung in mathematische Theorie und Methoden},
+    year={2019},
+    publisher={Springer Berlin Heidelberg},
+    isbn="978-3-662-58855-0",
+    doi="10.1007/978-3-662-58855-0_10",
+    url="https://doi.org/10.1007/978-3-662-58855-0_10"
+}
+
 @book{numerikGrossmann,
     author = { Großmann, Christian and Roos, Hans-Görg },
     title = { Numerik partieller Differentialgleichungen },
