kleine Einleitung geschrieben

--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -69,9 +69,33 @@
 \tableofcontents
 \clearpage
 \listofsymbols
+\clearpage
 
+\chapter{Einleitung}
+\label{sec: Einleitung}
+      In dieser Ausarbeitung werden die gewichtete Zählung von Eigenwerten auf einem Intervall behandelt.
+      Dazu wird in den ersten Kapiteln die nötige Theorie anhand der Quellen \cite{grundlageFutamura} und \cite{hauptteilTkachuk} beschrieben und anschließend in Kapitel \ref{sec: Programmieren} in Python angewendet.
+      Daraufhin werden in Kapitel \ref{sec: Verbesserungen} die Ergebnisse kritisch betrachtet und weitere Algorithmen eingeführt, um die Berechnungen zu beschleunigen.
+      Zum Schluss werden in Kapitel \ref{sec: Auswertung} die Ergebnisse wiederholt und ein Ausblick in weiterführende Themen gegeben.
 
+\chapter{Masse- und Steifigkeits-Matrizen}
+\label{sec: MS Matrizen}
 
+      
+
+\chapter{Das verallgemeinerte Eigenwert-Problem}
+\label{sec: EW Problem}
+
+\chapter{Quellen-Ausarbeitungen}
+
+\chapter{Implementierung}
+\label{sec: Programmieren}
+
+\chapter{Verbesserungen}
+\label{sec: Verbesserungen}
+
+\chapter{Auswertung}
+\label{sec: Auswertung}
 
 \chapter{Literaturverzeichnis}
 \printbibliography
