--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -44,7 +44,7 @@
     publisher = {Springer},
     isbn = {3642160093},
     isbn = {9783642160097},
-    year = {c 2011},
+    year = {2011},
     url = { https://katalog.slub-dresden.de/id/0-642805539 }
 }
 
