--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -127,7 +127,7 @@
 
             betrachte ein Beispiel mit 2 Massen, berachte die wirkenden Kräfte für erste Masse.
 
-            Nun kann man dies verallgemeinern auf ein System mit n Massen, wie in Bild #########.
+            Nun kann man dies verallgemeinern auf ein System mit n Massen, wie in Bild
 
             Es folgen die Gleichungen:
 
@@ -147,8 +147,6 @@
             Für den zwei-dimensionalen Fall benötigt man $n^2$ Punkt Massen und für jeden Punkt auch 2 Einträge in $x$, da es nun eine Bewegung in x- und in y-Richtung gibt.
             Somit existieren $2\,n^2$ Einträge in $x$, aber jede Masse besitzt nur 2 Verbindungen mehr, somit wird die Steifigkeitsmatrix \K viel größer, aber auch viel schwächer besetzt.
             
-
-      
       \section{Ermittlung der Matrizen der Modellprobleme}
             Nun können wir uns mit der Ermittlung der Massen- und Steifigkeitsmatrizen für die Modellprobleme vornehmen.
             Beginne dazu mit dem System in einer Dimension (Bild ....)
@@ -182,7 +180,7 @@
                    \vdots & \ddots & \ddots & \ddots  & -c_{n-1} \\
                    0& ... & 0& -c_{n-1} & c_{n-1}+c_n \\
                   \end{pmatrix}$$
-                  
+
       \section{Zusammenhang Eigenwert und Eigenfrequenz}
 
             wo schreibt man, dass man die Basis $cos(....)....$ nutzt, um auf das Problem $(K-\w^2 M)\, v = 0$ zu kommen?
