Quellen aus Internet hinzugefügt

--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -95,3 +95,31 @@
     number={3},
     year={1972}
 }
+
+@online{d_AlembertPrinzip,
+    title={Prinzip von d'Alembert - Physik},
+    author={Simon Julius Dücker},
+    url={https://www.ingenieurkurse.de/physik/kinetik-ursache-von-bewegungen/prinzip-von-d-alembert.html},
+    urldate={2024-09-04T09:41:00}
+}
+
+@online{präsiLängsschwinger,
+    title={5. Mehrmassenschwinger},
+    author={Prof. Dr.-Ing. T. Preussler},
+    url={https://www.umwelt-campus.de/fileadmin/Umwelt-Campus/User/TPreussler/Download/Maschinendynamik_und_Betriebsfestigkeit/Foliensaetze/05_Mehrmassenschwinger_1.pdf},
+    urldate={2024-09-04T09:44:00}
+}
+
+@online{federkraft,
+    title={Gewichtskraft, Federkraft - Physik},
+    author={Simon Julius Dücker},
+    url={https://www.ingenieurkurse.de/physik/kinetik-ursache-von-bewegungen/beispiele-fuer-kraefte/gewichtskraft-federkraft.html},
+    urldate={2024-09-04T09:47:00}
+}
+
+@online{BildKräfteFeder,
+    title={Einfachste mechanische Schwingsysteme},
+    author={},
+    url={https://www.georgi-dd.de/files/a22.pdf},
+    urldate={2024-09-04T09:49:00}
+}
