--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -8,7 +8,7 @@
 \usepackage{amsmath, amsfonts, amssymb, amsthm} %% mathematics tools
 \usepackage{csquotes}
 \usepackage[draft]{listofsymbols}
-\usepackage[backend=biber, style=numeric]{biblatex} %% Literature citing engine
+\usepackage[backend=biber, style=numeric, urldateusetime=true]{biblatex} %% Literature citing engine
 
 %__________Definitions_____________________________
 
@@ -121,6 +121,12 @@
       Hierbei haben die Federn keine Massen und es existieren keine Dämpfung oder Gewichtskraft.
 
       \section{Herleitung durch das Prinzip von d'Alembert}
+            Nach \cite{d_AlembertPrinzip} besage das Prinzip von d'Alembert, dass die Summe aller wirkenden Kräfte in einem beschleunigten System verschwinde.
+
+            Somit wird zuerst ein Kräftegleichgewicht aufgestellt und anschließend in Matrix-Schreibweise umgeformt, wodurch man die Massen- und Steifigkeitsmatrix erhält.
+
+            N
+            
             Da diese Herleitung auf Kräftegleichgewichten beruht, werden nun die agierenden Kräfte kurz erläutert:
 
             Die erste Kraft ist gleich m*a, also Masse mal Beschleunigung, die zweite Kraft ist die Federspannkraft, gemäß dem Hook'schen Gesetz.
